# freqtrade_operator

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  LICENSE  README.md  Tiltfile  index.html  kind-config.yaml  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yaml  docs.yaml  release.yaml
charts/freqtrade-operator/: Chart.yaml  values.yaml
charts/freqtrade-operator/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  serviceaccount.yaml
configuration/: index.html
deploy/: namespaces.yaml
deploy/crds/: freqtrade_v1alpha1.yaml  freqtrade_webserver_v1alpha1.yaml
dev/: 404.html  index.html  sitemap.xml
dev/changelog/: index.html
dev/configuration/: index.html
dev/examples/: production-setup.yaml
dev/installation/: index.html
dev/quickstart/: index.html
dev/reference/crds/: index.html
dev/reference/helm/: index.html
dev/search/: search_index.json
dev/strategies/: index.html
docs/: configuration.md  index.md  installation.md  quickstart.md  strategies.md
docs/examples/: multi-strategy-bot.yaml  production-setup.yaml  simple-bot.yaml
docs/reference/: crds.md  helm.md
installation/: index.html
quickstart/: index.html
reference/crds/: index.html
reference/helm/: index.html
src/: __init__.py
src/freqtrade_operator/: __init__.py  main.py
src/freqtrade_operator/handlers/: freqtradebot.py  webserver.py
src/freqtrade_operator/jobs/: backtest.py
src/freqtrade_operator/observability/: __init__.py  otel.py
src/freqtrade_operator/resources/: __init__.py  configmap.py  database.py  deployment.py
src/freqtrade_operator/utils/: git_sync.py
strategies/: index.html
